src/test/contracts/negative/modules_export_importer.jsligo
#import "modules_export_imported.jsligo" "M"

const y : M.t = M.x;
